# QuackEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  main.cpp  readme.md
Editor/: CMakeLists.txt
Editor/include/: CameraEditor.hpp  Editor.hpp
Editor/include/Widgets/: AssetWidget.hpp  ExplorerWidget.hpp  LogWidget.hpp  PropertiesWidget.hpp  SceneWidget.hpp  ToolboxWidget.hpp  ViewerWidget.hpp  ViewportWidget.hpp  Widget.hpp
Editor/src/: CameraEditor.cpp  Editor.cpp  main.cpp  mainCamera.cpp  mainDemo.cpp  mainECS.cpp  mainFrameBuffer.cpp  mainOpenGLInterface.cpp  mainPhysics.cpp  mainRenderSystem.cpp  mainShape.cpp  mainSound.cpp
Editor/src/Widgets/: AssetWidget.cpp  ExplorerWidget.cpp  LogWidget.cpp  MenuWidget.cpp  PropertiesWidget.cpp  SceneWidget.cpp  ToolboxWidget.cpp  ViewerWidget.cpp  ViewportWidget.cpp  Widget.cpp
Engine/: CMakeLists.txt
Engine/Shader/: fragment.fs
Engine/Shader/Fonts/: Font.qsh
Engine/Shader/FragmentLight/: FragmentBasicLight.fs
Engine/Shader/Framebuffer/: BasicFragment.fs  BasicVertex.vs
Engine/Shader/Light/: FragmentBasicLight.fs  FragmentMainLight.fs  FragmentMainLightNormal.fs  FragmentNormalMapLight.fs
Engine/Shader/Light/Color/: FragmentAmbientDiffuseColor.fs  FragmentSpecularColor.fs
Engine/Shader/Light/Texture/: FragmentAmbientDiffuseColor.fs  FragmentSpecularColor.fs
Engine/Shader/Object/: Object.vs  ObjectFragment.fs  ObjectVertex.vs  ShadowMap.qsh
Engine/Shader/Object/Base/: FragmentMain.fs  Vertex.vs
Engine/Shader/Object/FragmentColor/: FragmentTextureColor.fs
Engine/Shader/Object/Light/: FragmentMainLight.fs  FragmentMainLightNormal.fs  FragmentStartLight.fs  VertexNormalMap.vs
Engine/Shader/Object/Skeletal/: SkeletalVertex.vs
Engine/Shader/PostProcess/: CircleShadow.qsh  FadingParticle.qsh  FadingParticule.qsh  GammaCorrection.qsh  SquareShadow.qsh
Engine/Shader/Text/: Text.qsh
Engine/include/: Engine.hpp  main.h
Engine/include/Audio/: Sound.hpp  SoundManager.hpp
Engine/include/Debug/: Assertion.hpp  Log.hpp
Engine/include/Input/: InputManager.hpp  PlatformInput.hpp  PlatformInputGLFW.hpp
Engine/include/Maths/: Matrix4.hpp  Matrix4.inl  Quaternion.hpp  Quaternion.inl  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl  Vector4.hpp  Vector4.inl
Engine/include/Physics/: PhysicsCollisionCallback.hpp  PhysicsSystem.hpp
Engine/include/Renderer/: Animation.hpp  Framebuffer.hpp  IcoSphere.hpp  Light.hpp  Material.hpp  Mesh.hpp  Model.hpp  ModelRenderer.hpp  OpenGLInterface.hpp  Particle.hpp  PostProcessManager.hpp  ProcessBase.hpp  RendererInterface.hpp  RendererManager.hpp  RendererPlatform.hpp  Shader.hpp  Shape.hpp  SkeletalMesh.hpp  Skeleton.hpp  Texture.h  Texture.hpp  Vertex.hpp  Window.hpp
Engine/include/Renderer/PostProcess/: KernelPostProcess.hpp  Mat4PostProcess.hpp
Engine/include/Renderer/UI/: DialogBox.hpp  Font.hpp  Text.hpp
Engine/include/Resources/: Asset.hpp  Model.hpp  ModelLoader.hpp  ResourcesManager.hpp  ShaderLoader.hpp  TextureLoader.hpp
Engine/include/Resources/Loaders/: ModelLoader.hpp  ShaderLoader.hpp  TextureLoader.hpp
Engine/include/Scene/: Archetype.hpp  Camera.hpp  Component.hpp  Ecs.hpp  Entity.hpp  PhysicsComponent.hpp  Scene.hpp  ScriptComponent.hpp  TransformComponent.hpp  Types.hpp  World.hpp
Engine/include/Scene/Component/: Animator.hpp  Camera.hpp  CharacterController.hpp  CharacterControllerSystem.hpp  Component.hpp.todelete  ComponentArray.hpp  ComponentManager.hpp  EngineComponents.hpp  Light.hpp  Material.hpp  Mesh.hpp  Model.hpp  Name.hpp  ParticleEmitter.hpp  Physics.hpp  (+5 more)
Engine/include/Thread/: TaskSystem.hpp  ThreadPool.hpp
Engine/include/Time/: TimeManager.hpp  TimePlatform.hpp  TimePlatformGLFW.hpp
Engine/include/Tools/: Random.hpp  Type.hpp
Engine/src/: Engine.cpp  main.cpp
Engine/src/Audio/: Sound.cpp  SoundManager.cpp
Engine/src/Input/: InputManager.cpp  PlatformInputGLFW.cpp
Engine/src/Physics/: PhysicsCollisionCallback.cpp  PhysicsEventManager.cpp
Engine/src/Renderer/: Animation.cpp  Framebuffer.cpp  IcoSphere.cpp  Light.cpp  Material.cpp  Mesh.cpp  Model.cpp  ModelRenderer.cpp  OpenGLInterface.cpp  Particle.cpp  PostProcessManager.cpp  ProcessBase.cpp  RendererInterface.cpp  RendererManager.cpp  RendererPlatform.cpp  Shader.cpp  Shape.cpp  SkeletalMesh.cpp  Skeleton.cpp  Texture.cpp  Window.cpp
Engine/src/Resources/: Model.cpp  ModelLoader.cpp  ModelRenderer.cpp  ResourcesManager.cpp  ShaderLoader.cpp  Test.cpp  TextureLoader.cpp
Engine/src/Scene/: Archetype.cpp  Camera.cpp  Component.cpp  Ecs.cpp  Entity.cpp  PhysicsComponent.cpp  RendererComponent.cpp  Scene.cpp  ScriptComponent.cpp  TransformComponent.cpp  World.cpp
Engine/src/Thread/: TaskSystem.cpp  ThreadPool.cpp
Engine/src/Time/: TimeManager.cpp  TimePlatformGLFW.cpp
Engine/src/Tools/: Random.cpp  Type.cpp
Game/: CMakeLists.txt
Game/Asset/: Editor.ini  Main.qck  Temp.fs
Game/Asset/Model/: Bard.glb  HH.glb  Rumba.glb  Vampire.glb
Game/Asset/Scenes/: CampfireScene.qck  Dungeon.qck  Main.qck  Main2.qck  Main3.qck  Village.qck
Game/Asset/Shader/: BaseShader.qsh  BaseTest.qsh  CellShading.qsh  FragmentBasicLight.fs  FragmentMainLight.fs  FragmentStart.fs  FragmentStartLight.fs  NightEffect.qsh  NoteDisplayShader.qsh  RedOnlyPostProcess.qsh  fragment.fs
Game/include/: EnemyWeaknessDisplay.hpp  NoteDisplaySystem.hpp  game.hpp
Game/include/Enemy/: EnemyComponent.hpp  EnemyManagerComponent.hpp  EnemyManagerSystem.hpp  EnemySpawnPointComponent.hpp  EnemySpawnSystem.hpp  EnemySystem.hpp
Game/include/Player/: Player.hpp  PlayerComponent.hpp  PlayerSound.hpp  PlayerSystem.hpp
Game/include/TriggerSwitchScene/: TriggerSwitchSceneComponent.hpp  TriggerSwitchSceneSystem.hpp
Game/src/: EnemyWeaknessDisplay.cpp  NoteDisplaySystem.cpp  game.cpp  main.cpp
Game/src/Enemy/: EnemyComponent.cpp  EnemyManagerSystem.cpp  EnemySpawnPointComponent.cpp  EnemySpawnSystem.cpp  EnemySystem.cpp
Game/src/Player/: Player.cpp  PlayerComponent.cpp  PlayerSound.cpp  PlayerSystem.cpp
Game/src/TriggerSwitchScene/: TriggerSwitchSceneSystem.cpp
(+130 files in other folders)
